--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.2.0",
     "three": "^0.176.0"
   },
